@@ -5,10 +5,13 @@ from linkcheck.utils import find_all_links
 
 class Command(BaseCommand):
 
-    help = "Goes through all models registered with Linkcheck and records any links found"
+    help = "Goes through all models registered with Linkcheck, records any new links found and removes all outdated links"
 
     def handle(self, *args, **options):
-        self.stdout.write("Finding all new links...")
-        results = find_all_links()
-        return ("%(urls_created)s new Url object(s), %(links_created)s new Link object(s), "
-                "%(urls_deleted)s Url object(s) deleted") % results
+        self.stdout.write("Updating all links...")
+        return "\n".join(
+            [
+                f"{model.capitalize()}: {', '.join([f'{count} {label}' for label, count in data.items()])}"
+                for model, data in find_all_links().items()
+            ]
+        )
